dumbass wont remove the damn red squiggly lines at the bottom whatever i do

--- a/templates/personal_page.html
+++ b/templates/personal_page.html
@@ -54,8 +54,8 @@
             <nav class="toolbar">
             <ul>
                 <li style="float: left;"><h2>Admin Panel</h2></li>
-                <li style="float: right;"><button onclick="location.href={{ url_for('manage_users') }}">Manage Users</button></li>
-                <li style="float: right;"><button onclick="location.href={{ url_for('manage_bins') }}">Manage Bins</button></li>
+                <li style="float: right;"><button onclick="location.href='{{ url_for('manage_users') }}';">Manage Users</button></li>
+                <li style="float: right;"><button onclick="location.href='{{ url_for('manage_bins') }}';">Manage Bins</button></li>
             </ul>
             </nav>
         </div>
