yesssssss i did it, i finally keep a span on the left and forms on the right

--- a/static/style.css
+++ b/static/style.css
@@ -348,14 +348,14 @@ button:hover {
 .selector {
   display: flex;
   align-items: center;
-  color: white;
   background-color: rgb(24, 24, 24);
-  padding: 1rem;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 600px;
   width: 90%;
   margin: .5rem;
+  padding-left: 1rem;  
+  padding-right: 1rem;
 }
 .logout-btn {
   background-color: #c21b1b;
