aligning buttons to the toolbar

--- a/templates/personal_page.html
+++ b/templates/personal_page.html
@@ -55,7 +55,7 @@
                 <form action="{{ url_for('manage_users') }}" style=" margin-left:auto; float: right;">
                     <button type="submit">Manage Users</button>
                 </form>
-                <form action="{{ url_for('manage_bins') }}" style=" margin:1rem; float: right;">
+                <form action="{{ url_for('manage_bins') }}" style=" margin-left:1rem; float: right;">
                     <button type="submit">Manage Bins</button>
                 </form>
         </div>
