--- a/static/style.css
+++ b/static/style.css
@@ -285,11 +285,22 @@ input {
   border-radius: 4px;
   box-sizing: border-box;
 }
+.logout-btn {
+  width: 100%;
+  padding: 0.5rem;
+  margin: .5rem;
+  background-color: #c21b1b;
+  color: whitesmoke;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
 button {
   width: 100%;
-  padding: 0.75rem;
+  padding: 0.5rem;
+  margin: 0.5rem;
   background-color: #859f3d;
-  color: white;
+  color: whitesmoke;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -357,16 +368,7 @@ button:hover {
   padding-left: 1rem;  
   padding-right: 1rem;
 }
-.logout-btn {
-  background-color: #c21b1b;
-  color: #f6fcdf;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 4px;
-  cursor: pointer;
-  margin: 10px;
-  width:min-content;  
-}
+
 .plot-container {
   display: flex;
   justify-content: center;
