--- a/static/style.css
+++ b/static/style.css
@@ -70,12 +70,23 @@
 
   .container {
     background-color: rgb(24, 24, 24);
-    padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 600px;
     width: 90%;
     margin: .5rem;
+    padding: 1rem;
+  }
+  .selector {
+    display: flex;
+    align-items: center;
+    background-color: rgb(24, 24, 24);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    width: 90%;
+    margin: 0.5rem;
+    padding: 1rem;
   }
   /* from navbar.html */
   .navbar {
@@ -356,18 +367,7 @@ button:hover {
   justify-content: center;
   margin-right: 10px;
 }
-.selector {
-  display: flex;
-  align-items: center;
-  background-color: rgb(24, 24, 24);
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  max-width: 600px;
-  width: 90%;
-  margin: .5rem;
-  padding-left: 1rem;  
-  padding-right: 1rem;
-}
+
 
 .plot-container {
   display: flex;
@@ -382,9 +382,9 @@ table {
 }
 th, td { /* table data */
   border-bottom: 1px solid #ddd;
-  padding: 8px;
+  padding: 0.5rem;
   text-align: center;
-  width: 33.33%;
+  width: 5rem;
 }
 tr:hover {
   background-color: rgb(0, 0, 0);
