--- a/templates/about.html
+++ b/templates/about.html
@@ -6,6 +6,7 @@
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
     rel="stylesheet"
   />
+  <title>About The SPJ</title>
 </head>
 
 <body>
