--- a/templates/personal_page.html
+++ b/templates/personal_page.html
@@ -12,6 +12,7 @@
     <main>
         <div class="fulllength">
             <h1>{{ current_user.username }}'s Personal Page</h1>
+            <h2>Let's see what you be up to deez days</h2>
         </div>
         <div class="container">
             <h3>Recycling Heatmap</h3>
