--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 
-<body class="body-home">
+<body>
   {% include 'navbar.html' %}
     <main>
       <div class="fulllength">
