--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,5 @@
+<!--{% if current_user.userlv == '1' %} {% endif %}-->
+
 <header>
   <script src="{{ url_for('qrbutton_js') }}"></script>
   <nav class="navbar">
