fix login button

--- a/templates/login.html
+++ b/templates/login.html
@@ -30,8 +30,8 @@
             {% endwith %}
             <form method="POST" action="{{ url_for('login') }}">
                 {{ form.hidden_tag() }}
-                <div> {{ form.username.label }} {{ form.username }} </div>
-                <div> {{ form.user_password.label }} {{ form.user_password }} </div>
+                <div class="form-group"> {{ form.username.label }} {{ form.username }} </div>
+                <div class="form-group"> {{ form.user_password.label }} {{ form.user_password }} </div>
                 {{ form.submit }}
             </form>
             <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
