--- a/static/style.css
+++ b/static/style.css
@@ -68,6 +68,13 @@
     padding-left: 1rem;
   }
 
+  .divider {
+    background-color: rgb(24, 24, 24);
+    max-width: 600px;
+    width: 90%;
+    padding: 1rem;
+  }
+
   .container {
     background-color: rgb(24, 24, 24);
     border-radius: 10px;
