--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -11,7 +11,7 @@
   {% include 'navbar.html' %}
   <main>
     
-    <div class="fulllength"> 
+    <div class="banner"> 
         <h1>Leaderboards</h1>
         <h2>See how you stack up against other users!</h2>
     </div>
