--- a/templates/manage_users.html
+++ b/templates/manage_users.html
@@ -10,7 +10,7 @@
 <body>
     {% include 'navbar.html' %}
     <main>
-        <div class="fulllength">
+        <div class="banner">
             <h1>User Management</h1>
         </div>
 
