--- a/templates/register.html
+++ b/templates/register.html
@@ -10,8 +10,8 @@
 <body>
     {% include 'navbar.html' %}
     <main>
-        <div class="fulllength">
-            <h1>Register NOW!</h1>
+        <div class="banner">
+            <h1>Registering to The SingProJet</h1>
             <h2>Welcome to the The SingProJet!</h2>
         </div>
         <div class="container">    
