--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
 <body>
   {% include 'navbar.html' %}
   <main>
-    <div class="fulllength">
+    <div class="banner">
       <h1>Hello, {{current_user.username}}!</h1>
     </div>
     <div class="container">  
