--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
 <body>
     {% include 'navbar.html' %}
     <main>
-        <div class="fulllength">
+        <div class="banner">
             <h1>Logging into The SingProJet</h1>
             <h2>Back to recycle more?</h2>
         </div>
