--- a/templates/manage_bins.html
+++ b/templates/manage_bins.html
@@ -10,7 +10,7 @@
 <body class="body-home">
     {% include 'navbar.html' %}
     <main>
-        <div class="fulllength">
+        <div class="banner">
             <h1>Bin Management</h1>
         </div>
         <div class="container">
