--- a/templates/while_throwing.html
+++ b/templates/while_throwing.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         {% include 'navbar.html' %}
-        <div class="fulllength">
+        <div class="banner">
             <h1>You seem to be recycling</h1>
         </div>
     </main>
