fix personal page

--- a/templates/personal_page.html
+++ b/templates/personal_page.html
@@ -20,7 +20,7 @@
                 {{ plot|safe }}
             </div>
         </div>
-        <div class="divider">
+        <div class="container">
             <h3>Recycling Statistics</h3>
             <table>
                 <tr>
