--- a/templates/manage_users.html
+++ b/templates/manage_users.html
@@ -20,7 +20,7 @@
                     <tr>
                         <th>ID</th>
                         <th>Username</th>
-                        <th>Admin</th>
+                        <th>Role     </th>
                         <th></th>
                     </tr>
                 </thead>
@@ -33,8 +33,8 @@
                         <td>
                             <form method="POST" action="{{ url_for('update_user_role', user_id=user.id) }}">
                                 <select name="role">
-                                    <option value="user" {% if user.userlv == 0 %}selected{% endif %}>User</option>
-                                    <option value="admin" {% if user.role == 1 %}selected{% endif %}>Admin</option>
+                                    <option value="User" {% if user.userlv == 'User' %}selected{% endif %}>User</option>
+                                    <option value="Admin" {% if user.role == 'Admin' %}selected{% endif %}>Admin</option>
                                 </select>
                                 <button type="submit" style="margin-top: 0.5rem;">Update Role</button>
                             </form>
