--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
                 {{ form.hidden_tag() }}
                 <div class="form-group"> {{ form.username.label }} {{ form.username }} </div>
                 <div class="form-group"> {{ form.user_password.label }} {{ form.user_password }} </div>
-                {{ form.submit }}
+                <button type="submit">{{ form.submit.label }}</button>
             </form>
             <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
         </div>
