fixed bug on home and manage_bins

--- a/templates/manage_bins.html
+++ b/templates/manage_bins.html
@@ -93,6 +93,8 @@
         <div class="container">
             <h3>Add New Bin</h3>
             <form id="add-bin-form">
+                    <label>Bin ID:</label>
+                    <input type="number" name = "bin_id" class="edit-input" required>
                     <label>Bin Type:</label>
                     <input type="text" name="bin_type" class="edit-input" required>
                     <label>Bin Location:</label>
