--- a/templates/after_throwing.html
+++ b/templates/after_throwing.html
@@ -11,7 +11,20 @@
     <main>
         {% include 'navbar.html' %}
         <div class="banner">
-            <h1>You seem to be recycling</h1>
+            <h1>Session Summary</h1>
+            <h2>Good Progress, {{ current_user.username }}!</h2>
+        </div>
+
+        <div class="container"></div>
+            <h3>Session Summary on __date__</h3>
+            <h4>You have thrown __count__ items in the __bintype__ Bin in ___location___ on ____time____.</h4>
+            <h3>Thank you for your contribution!</h3>
+        </div>
+
+        <div class="container">
+            <form action="{{ url_for('home') }}">
+                <button type="submit">Return to Home</button>
+            </form>
         </div>
     </main>
 </body>
