--- a/templates/after_throwing.html
+++ b/templates/after_throwing.html
@@ -17,7 +17,7 @@
 
         <div class="container"></div>
             <h3>Session Summary on __date__</h3>
-            <h4>You have thrown __count__ items in the __bintype__ Bin in ___location___ on ____time____.</h4>
+            <h4>You have thrown COUNT items in the TYPE Bin in LOCATION on TIME.</h4>
             <h3>Thank you for your contribution!</h3>
         </div>
 
