--- a/templates/manage_bins.html
+++ b/templates/manage_bins.html
@@ -61,6 +61,7 @@
                         
                         <td>
                             <button class="modify-btn" onclick="toggleAllEditForms('{{ bin.bin_id }}')">Modify</button>
+                            
                         </td>
                     </tr>
                     <tr>
@@ -76,6 +77,7 @@
                                         <label>Bin Location:</label>
                                         <input type="text" name="bin_location" value="{{ bin.bin_location }}" class="edit-input" required>
                                     </div>
+                                    <button class="delete_btn" onclick="deleteBin('{{ bin.bin_id }}')">Delete</button>
                                    
                                     <button type="submit" class="submit-edit-btn">Submit Changes</button>
                                 </form>
@@ -93,10 +95,15 @@
         <div class="container">
             <h3>Add New Bin</h3>
             <form id="add-bin-form">
-                    <label>Bin ID:</label>
-                    <input type="number" name = "bin_id" class="edit-input" required>
+                    
                     <label>Bin Type:</label>
-                    <input type="text" name="bin_type" class="edit-input" required>
+                    <select id = "bin_type" name="bin_type" class="edit-input" required>
+                        <option value="" disabled selected hidden>Select your option</option>
+                        <option value = 'Paper'>Paper</option>
+                        <option value = "Plastic">Plastic</option>
+                        <option value = "Metal">Metal</option>
+                        <option value = "Glass">Glass</option>
+                    </select>
                     <label>Bin Location:</label>
                     <input type="text" name="bin_location" class="edit-input" required>
                 
@@ -170,6 +177,30 @@
                 alert('An error occurred while adding the bin');
             });
         });
+        function deleteBin(binId) {
+    if (confirm('Are you sure you want to delete this bin?')) {
+        const formData = new FormData();
+        formData.append('bin_id', binId);
+
+        fetch('/delete_bin', {
+            method: 'POST',
+            body: formData
+        })
+        .then(response => response.json())
+        .then(data => {
+            if (data.success) {
+                alert('Bin deleted successfully');
+                location.reload();
+            } else {
+                alert('Failed to delete bin: ' + data.error);
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
+            alert('An error occurred while deleting the bin');
+        });
+    }
+}
     </script>
 </body>
 </html>
