recycling ranks/titles system in personal page

--- a/static/style.css
+++ b/static/style.css
@@ -358,6 +358,13 @@ button:hover {
   max-width: 100%;
 }
 
+.highlight {
+  background-color: #4ef07977;
+}
+.hidden {
+  display: none;
+}
+
 
 table {
   width: 90%;
