--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<!--{% if current_user.userlv == '1' %} {% endif %}-->
+<!--{% if current_user.userlv == 'Admin' %} {% endif %}-->
 
 <header>
   <script src="{{ url_for('qrbutton_js') }}"></script>
